Fix header overflow on mobile

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -283,7 +283,6 @@ header {
       h2 {
         font-size: 18pt;
         padding-top: 9pt;
-        white-space: nowrap;
       }
     }
   }
